[gd_scene load_steps=5 format=2]

[ext_resource path="res://UIcomponents/Menu.gd" type="Script" id=1]
[ext_resource path="res://UIcomponents/ChooseLevel.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="Node" type="Node"]

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="MainMenu" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.5
margin_top = -65.0
margin_right = 70.5
margin_bottom = 65.0
alignment = 1

[node name="Label" type="Label" parent="Menu/MainMenu"]
margin_top = 34.0
margin_right = 141.0
margin_bottom = 48.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.0392157, 0.00784314, 0.00784314, 1 )
text = "Voidling"
align = 1

[node name="StartButton" type="Button" parent="Menu/MainMenu"]
margin_top = 52.0
margin_right = 141.0
margin_bottom = 72.0
text = "Play"

[node name="Quit" type="Button" parent="Menu/MainMenu"]
margin_top = 76.0
margin_right = 141.0
margin_bottom = 96.0
text = "Quit"

[node name="ChooseLevel" type="VBoxContainer" parent="Menu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -143.0
margin_right = 127.0
margin_bottom = 71.0
custom_constants/separation = 9
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/ChooseLevel"]
margin_right = 254.0
margin_bottom = 14.0
text = "Choose Level"
align = 1

[node name="Level1" type="Button" parent="Menu/ChooseLevel"]
margin_top = 23.0
margin_right = 254.0
margin_bottom = 43.0
text = "Level 1"

[node name="Level2" type="Button" parent="Menu/ChooseLevel"]
margin_top = 52.0
margin_right = 254.0
margin_bottom = 72.0
text = "Level 2"

[node name="Level3" type="Button" parent="Menu/ChooseLevel"]
margin_top = 81.0
margin_right = 254.0
margin_bottom = 101.0
text = "Level 3"

[node name="Level4" type="Button" parent="Menu/ChooseLevel"]
margin_top = 110.0
margin_right = 254.0
margin_bottom = 130.0
text = "Level 4"

[node name="Level5" type="Button" parent="Menu/ChooseLevel"]
margin_top = 139.0
margin_right = 254.0
margin_bottom = 159.0
text = "Level 5"

[node name="Level6" type="Button" parent="Menu/ChooseLevel"]
margin_top = 168.0
margin_right = 254.0
margin_bottom = 188.0
text = "Level 6"

[node name="Level7" type="Button" parent="Menu/ChooseLevel"]
margin_top = 197.0
margin_right = 254.0
margin_bottom = 217.0
text = "Level 7"

[node name="Level8" type="Button" parent="Menu/ChooseLevel"]
margin_top = 197.0
margin_right = 254.0
margin_bottom = 217.0
text = "Level 8"

[node name="Back" type="Button" parent="Menu/ChooseLevel"]
margin_top = 226.0
margin_right = 254.0
margin_bottom = 246.0
text = "Back"

[node name="MenuBackground" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="MenuBackground"]

[node name="Wall" type="MeshInstance" parent="MenuBackground"]
transform = Transform( 8.53491, 0, 0, 0, 4.3838, 0, 0, 0, 0.121785, 0, 0, -5.36708 )
mesh = SubResource( 1 )

[node name="BackgroundLight" type="DirectionalLight" parent="MenuBackground"]
transform = Transform( 1, 0, 0, 0, 0.990643, 0.136476, 0, -0.136476, 0.990643, 0, 0, 0 )
light_color = Color( 0.666667, 0.545098, 0.803922, 1 )

[node name="SpotLight" type="SpotLight" parent="MenuBackground"]
transform = Transform( 1, 0, 0, 0, 0.997842, 0.0656646, 0, -0.0656646, 0.997842, 0, -0.634074, -0.46246 )
shadow_enabled = true
spot_range = 6.0

[node name="Ground" type="MeshInstance" parent="MenuBackground"]
transform = Transform( 6.50653, 0, 0, 0, 0.138606, 0, 0, 0, 2.9775, 0, -1.83787, -3.44406 )
mesh = SubResource( 2 )

[connection signal="pressed" from="Menu/MainMenu/StartButton" to="Menu" method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/MainMenu/Quit" to="Menu" method="_on_Quit_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level1" to="Menu/ChooseLevel" method="_on_Level1_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level2" to="Menu/ChooseLevel" method="_on_Level2_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level3" to="Menu/ChooseLevel" method="_on_Level3_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level4" to="Menu/ChooseLevel" method="_on_Level4_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level5" to="Menu/ChooseLevel" method="_on_Level5_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level6" to="Menu/ChooseLevel" method="_on_Level6_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level7" to="Menu/ChooseLevel" method="_on_Level7_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Level8" to="Menu/ChooseLevel" method="_on_Level8_pressed"]
[connection signal="pressed" from="Menu/ChooseLevel/Back" to="Menu/ChooseLevel" method="_on_Back_pressed"]
